--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container">
             <button id="randomCardBtn">Sacar carta de tesoro</button>
             <button id="shuffleBtn">Barajar Tesoros</button> <!-- Nuevo botón para barajar -->
-            <div class="card" id="card-display">Tu carta aparecerá aquí</div>
+            <div class="card" id="card-display"></div>
             <audio id="audio-player" src="" preload="auto"></audio> <!-- Elemento de audio -->
         </div>
     </div>
