--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,19 @@
 <!-- menu.html -->
 <div id="menu-lateral">
+     <h3>Configuración</h3>
+    <label for="vidas">Vidas:</label>
+    <select id="vidas">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
     <nav>
         <ul>
             <li><a href="Tirada_de_dados.html">Tirada de dados</a></li>
