--- a/Tesoros_Superiores.html
+++ b/Tesoros_Superiores.html
@@ -27,7 +27,7 @@
     <div id="menu-container"></div> <!-- Cargar menú lateral aquí -->
 
     <div id="contenido">
-        <h1>Emboscada</h1>
+        <h1>Tesoro Superiores</h1>
         <button id="tirarBtn">Tirar Dado</button>
         <p id="resultado"></p>
     </div>
