--- a/objetos_legendarios.html
+++ b/objetos_legendarios.html
@@ -13,15 +13,18 @@
             <iframe src="menu.html" frameborder="0" class="menu-frame"></iframe>
         </div>
 
-        <!-- Zona de contenido principal -->
+        <!-- Zona de contenido principal centrada -->
         <div class="main-content">
-            <button onclick="cambiarImagen()" id="legendario-btn">Objeto Legendario</button>
-            <button onclick="restaurarImagen()" id="barajar-btn">Barajar Objetos Legendarios</button>
-            <br><br>
-            <img src="objetos_legendarios.png" id="imagen-legendaria" alt="Objeto Legendario" class="legend-image">
+            <div class="center-content">
+                <button onclick="cambiarImagen()" id="legendario-btn">Objeto Legendario</button>
+                <button onclick="restaurarImagen()" id="barajar-btn">Barajar Objetos Legendarios</button>
+                <br><br>
+                <img src="objetos_legendarios.png" id="imagen-legendaria" alt="Objeto Legendario" class="legend-image">
+            </div>
         </div>
     </div>
 
     <script src="main.js"></script>
 </body>
 </html>
+
