--- a/objetos_legendarios.html
+++ b/objetos_legendarios.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-image: url('fondo.png'); background-size: cover;">
     <div class="container">
-        <!-- Carga del menú en el lado izquierdo -->
+        <!-- Carga del menú que ocupa todo el lado izquierdo -->
         <div class="menu">
             <iframe src="menu.html" frameborder="0" class="menu-frame"></iframe>
         </div>
